--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">StudentTests</string>
+
+    <string name="start_fragment_start_button">Select test</string>
+
+    <string name="language_fragment_selection">Selection:</string>
+
+    <string name="subject_fragment_selection">Selection:</string>
+
+    <string name="year_fragment_selection">Selection:</string>
+
+    <string name="review_fragment_selection">Selection:</string>
+    <string name="review_fragment_start">Start test</string>
+
+    <string name="test_section_question_button">Back To Question</string>
+
+    <string name="test_question_test_question_number">Question:</string>
+    <string name="test_question_test_back_button">Previous</string>
+    <string name="test_question_test_next_button">Next</string>
+    <string name="test_question_test_section_button">Section</string>
+
+    <string name="test_question_open_question_number">Question:</string>
+    <string name="test_question_open_back_button">Previous</string>
+    <string name="test_question_open_next_button">Next</string>
+    <string name="test_question_open_section_button">Section</string>
 </resources>
