--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,22 +3,22 @@
     <string name="app_name">StudentTests</string>
 
 <!--    Setup Activity general -->
+    <string name="setup_selection_label">Selection:</string>
 
 <!--    Start Fragment -->
-    <string name="start_fragment_start_button">Select test</string>
+    <string name="setup_start_start_button">Select test</string>
 
 <!--    Language Fragment -->
-    <string name="language_fragment_selection">Selection:</string>
 
 <!--    Subject Fragment -->
-    <string name="subject_fragment_selection">Selection:</string>
+    <string name="setup_subject_selection_value">%1$s - %2$s</string>
 
 <!--    Year Fragment -->
-    <string name="year_fragment_selection">Selection:</string>
+    <string name="setup_year_selection_value">%1$s - %2$s - %3$s</string>
 
 <!--    Review Fragment -->
-    <string name="review_fragment_selection">Selection:</string>
-    <string name="review_fragment_start">Start test</string>
+    <string name="setup_review_selection_value">%1$s - %2$s - %3$s - %4$d</string>
+    <string name="setup_review_start_button">Start test</string>
 
 <!--    Test Activity general -->
 
@@ -26,21 +26,23 @@
     <string name="test_back_button">Previous</string>
     <string name="test_next_button">Next</string>
     <string name="test_finish_button">Finish</string>
+    <string name="test_question_number">Questions:</string>
+    <string name="test_question_number_value">%1$d / %2$d</string>
 
 <!--    Question Fragment - Section -->
     <string name="test_section_question_button">Back To Question</string>
 
 <!--    Question Fragment - Test question -->
-    <string name="test_question_test_question_number">Question:</string>
     <string name="test_question_test_section_button">Section</string>
 
 <!--    Question Fragment - Open question -->
-    <string name="test_question_open_question_number">Question:</string>
     <string name="test_question_open_section_button">Section</string>
 
 <!--    Result Fragment -->
-    <string name="test_result_questions">Questions:</string>
+    <string name="test_result_questions_value">%1$d / %2$d</string>
     <string name="test_result_points">Points:</string>
+    <string name="test_result_points_value">%1$d / %2$d</string>
     <string name="test_result_percentage">Percentage:</string>
+    <string name="test_result_percentage_value">%1$.2f</string>
     <string name="test_result_finish_button">Close</string>
 </resources>
